--- a/styles/web/theme-template.less
+++ b/styles/web/theme-template.less
@@ -1423,14 +1423,15 @@ div.k-imagebrowser-dropzone em
 }
 
 .km-pane-wrapper .k-mobile-list > ul > li > .k-link,
-.km-pane-wrapper .k-mobile-list .k-recur-view > .k-edit-label:nth-child(3)
+.km-pane-wrapper .k-mobile-list .k-recur-view > .k-edit-label:nth-child(3),
+.km-pane-wrapper #recurrence .km-scroll-container > .k-edit-label:first-child
 {
     color: darken(@cell-border-color, 30);
 }
 
-.km-pane-wrapper .k-mobile-list .k-recur-view > .k-edit-label:nth-child(3)
+.km-pane-wrapper .k-mobile-list > ul > li > .k-link
 {
-    color: darken(@cell-border-color, 30);
+    border-bottom: 1px solid @cell-border-color;
 }
 
 .km-pane-wrapper .k-mobile-list .k-edit-field
